--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,12 @@ find_package(SDL2 REQUIRED)
 include_directories(${SDL2_INCLUDE_DIRS})
 
 # Add the source files for the C++ and CUDA code
-add_executable(fractal main.cu)
+# add_executable(fractal main.cu)
+add_executable(fractal newton_fractals/main_newton.cpp
+                       newton_fractals/newton_fractal.cpp
+                       newton_fractals/reframe.cpp)
+
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
 
 # Link Libraries
 target_link_libraries(fractal ${SDL2_LIBRARIES})
