Lyapunov CUDA imp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,13 +8,17 @@ find_package(SDL2 REQUIRED)
 include_directories(${SDL2_INCLUDE_DIRS})
 
 # Add the source files for the C++ and CUDA code
-# add_executable(fractal main.cu)
-add_executable(fractal newton_fractals/main_newton.cpp
+add_executable(newton newton_fractals/main_newton.cpp
                        newton_fractals/newton_fractal.cpp
                        newton_fractals/reframe.cpp
                        newton_fractals/render_cuda.cu)
 
+add_executable(lyapunov lyapunov_fractals/lyapunov_fractal.cpp
+                        lyapunov_fractals/lyapunov_main.cpp
+                        lyapunov_fractals/render_cuda.cu)
+
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
 
 # Link Libraries
-target_link_libraries(fractal ${SDL2_LIBRARIES})
+target_link_libraries(newton ${SDL2_LIBRARIES})
+target_link_libraries(lyapunov ${SDL2_LIBRARIES})
